# djongo_legal

./: .gitignore  README.md  pyproject.toml  setup.py
djongo_legal/: __init__.py  admin.py  base.py  exceptions.py  features.py  introspection.py  transaction.py
djongo_legal/models/: fields.py  indexes.py  json.py
djongo_legal/sql2mongo/: aggregation.py  constraints.py  query.py  sql_tokens.py  validation.py
docs/: _config.yml
docs/_data/: home.yml  navigation.yml
docs/djongocs/: main.215629bdb2b7bb1f.js
docs/markdown/documentation/: get-started.md
docs/markdown/documentation/djongo/: integrating-django-with-mongodb.md
docs/markdown/documentation/side-stuff/: different-ways-to-integrate-django-with-mongodb.md
tests/: precheckin.py
tests/django_tests/test_utils/: test_runner.py
tests/django_tests/test_utils/settings/: test_mongodb.py
tests/django_tests/tests/v22/tests/: runtests.py
tests/djongo_tests/test_project/test_project/settings/: settings_lite.py  settings_loaded.py  settings_loaded_formsets.py  settings_precheckin.py
tests/mock_tests/: test_sqlparsing.py
